[tool.poetry]
name = "servicenowrequestsimulator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pysnow = "^0.7.16"
texttable = "^1.6"
tqdm = "^4.46"
colorama = "^0.4.3"
names = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
